subdir('ActorGraph')

pathfinder_ex = executable('pathfinder.cpp.executable',
    sources: ['pathfinder.cpp'],
    dependencies : [actor_graph_dep],
    install : true)

linkpredictor_ex = executable('linkpredictor.cpp.executable',
    sources: ['linkpredictor.cpp'],
    dependencies : [actor_graph_dep],
    install : true)

movietraveler_ex = executable('movietraveler.cpp.executable',
    sources: ['movietraveler.cpp'],
    dependencies : [actor_graph_dep],
    install : true)