test_actorgraph_exe = executable('test_actorgraph.cpp.executable', 
    sources: ['test_actorgraph.cpp'], 
    dependencies : [actor_graph_dep, gtest_dep])
test('my Actor Graph test', test_actorgraph_exe)

test_unionfind_exe = executable('test_unionfind.cpp.executable', 
    sources: ['test_unionfind.cpp'], 
    dependencies : [actor_graph_dep, gtest_dep])
test('my Union Find test', test_unionfind_exe)